--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-virtual": "^3.13.18",
+    "@tiptap/extension-code-block-lowlight": "^3.18.0",
     "@tiptap/extension-color": "^3.18.0",
     "@tiptap/extension-highlight": "^3.18.0",
     "@tiptap/extension-image": "^3.18.0",
     "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.18.0",
+    "@tiptap/extension-table": "^3.18.0",
+    "@tiptap/extension-table-cell": "^3.18.0",
+    "@tiptap/extension-table-header": "^3.18.0",
+    "@tiptap/extension-table-row": "^3.18.0",
+    "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/extension-text-style": "^3.18.0",
+    "@tiptap/extension-underline": "^3.18.0",
     "@tiptap/pm": "^3.18.0",
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
@@ -43,6 +50,7 @@
     "date-fns-tz": "^3.2.0",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.3",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
