--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prisma": "5.22.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-cli": "^6.0.1"
   }
 }
