--- a/package.json
+++ b/package.json
@@ -26,19 +26,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-virtual": "^3.13.18",
-    "@tiptap/extension-code-block-lowlight": "^3.18.0",
     "@tiptap/extension-color": "^3.18.0",
     "@tiptap/extension-highlight": "^3.18.0",
     "@tiptap/extension-image": "^3.18.0",
     "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.18.0",
-    "@tiptap/extension-table": "^3.18.0",
-    "@tiptap/extension-table-cell": "^3.18.0",
-    "@tiptap/extension-table-header": "^3.18.0",
-    "@tiptap/extension-table-row": "^3.18.0",
-    "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/extension-text-style": "^3.18.0",
-    "@tiptap/extension-underline": "^3.18.0",
     "@tiptap/pm": "^3.18.0",
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
@@ -50,11 +43,12 @@
     "date-fns-tz": "^3.2.0",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.3",
-    "lowlight": "^3.3.0",
+    "lru-cache": "^11.2.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
     "node-cron": "^4.2.1",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
@@ -78,7 +72,6 @@
     "prisma": "5.22.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "webpack-cli": "^6.0.1"
+    "typescript": "^5"
   }
 }
