--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,11 @@ ENCRYPTION_KEY=""
 # CRON_SECRET=""
 
 # Опционально: для деплоя (ссылки приглашений и т.д.)
-# NEXTAUTH_URL="https://your-domain.com"
-# VERCEL_URL="your-domain.com"
+# NEXT_PUBLIC_APP_URL="https://your-domain.com"
+# APP_URL="https://your-domain.com"
+
+# Опционально: для внешнего мониторинга GET /api/health (Docker, K8s). Если задано, запрос должен содержать ?secret=HEALTH_CHECK_SECRET
+# HEALTH_CHECK_SECRET=""
+
+# Опционально: Sentry (отправка ошибок)
+# NEXT_PUBLIC_SENTRY_DSN="https://...@sentry.io/..."
