--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DATABASE_URL="postgresql://user:password@localhost:5432/rocketchat_scheduler"
 # Секрет для JWT-токенов сессии. В проде — длинная случайная строка.
 JWT_SECRET="your-secret-key"
 
+# При деплое по HTTP (Docker без HTTPS): COOKIE_SECURE=false, иначе вход не сохраняется.
+# COOKIE_SECURE="false"
+
 # Ключ шифрования паролей пространств (Rocket.Chat).
 # В проде обязательно задать отдельный ключ (не использовать JWT_SECRET).
 # Минимум 32 символа; иначе используется JWT_SECRET (не рекомендуется в проде).
