--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       POSTGRES_DB: rocketchat_scheduler
     volumes:
       - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # Порт не публикуем — приложение ходит в postgres по внутренней сети. Если нужен доступ с хоста (psql), раскомментируйте: "5433:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d rocketchat_scheduler"]
       interval: 3s
