--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ../.env
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/rocketchat_scheduler
+      HOSTNAME: "0.0.0.0"
     depends_on:
       postgres:
         condition: service_healthy
