--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sharp": "0.32.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tsx": "^4.19.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
