--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,4 @@
-# Деплой: Postgres + приложение на 10.76.52.21
-# Перед запуском: сгенерировать .env в корне репо:
-#   ./deploy/generate-env.sh > .env
-# Запуск из корня репо: docker compose -f deploy/docker-compose.yml up -d --build
+version: '3.8'
 
 services:
   postgres:
@@ -12,7 +9,6 @@ services:
       POSTGRES_DB: rocketchat_scheduler
     volumes:
       - pgdata:/var/lib/postgresql/data
-    # Порт не публикуем — приложение ходит в postgres по внутренней сети. Если нужен доступ с хоста (psql), раскомментируйте: "5433:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d rocketchat_scheduler"]
       interval: 3s
@@ -21,10 +17,10 @@ services:
 
   app:
     build:
-      context: ..
+      context: .
       dockerfile: Dockerfile
     env_file:
-      - ../.env
+      - .env
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/rocketchat_scheduler
       HOSTNAME: "0.0.0.0"
