--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -17,10 +16,10 @@ services:
 
   app:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     env_file:
-      - .env
+      - ../.env
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/rocketchat_scheduler
       HOSTNAME: "0.0.0.0"
