--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,17 @@ services:
       - "3000:3000"
     env_file:
       - .env
+    restart: unless-stopped
+
+  cron:
+    build: .
+    env_file:
+      - .env
+    depends_on:
+      - web
+    command: >
+      sh -c 'while true; do
+      curl -sf -H "Authorization: Bearer ${CRON_SECRET}" http://web:3000/api/cron/send-messages || true;
+      sleep 60;
+      done'
+    restart: unless-stopped
