--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     depends_on:
       - web
     command: >
-      sh -c 'while true; do
-      curl -sf -H "Authorization: Bearer ${CRON_SECRET}" http://web:3000/api/cron/send-messages || true;
+      sh -c "while true; do
+      curl -sf -H \"Authorization: Bearer $$CRON_SECRET\" http://web:3000/api/cron/send-messages || true;
       sleep 60;
-      done'
+      done"
     restart: unless-stopped
